--- a/index.html
+++ b/index.html
@@ -216,9 +216,8 @@
         </div>
         <div class="col-lg-2 align-self-center text-center">
           <img
+            class="w-25 w-lg-100"
             src="./images/Welcome.jpg"
-            width="153"
-            height="220"
             alt="Welcome (family walking through church doors)"
           />
         </div>
@@ -238,9 +237,8 @@
             <div class="col-lg 2 align-self-center">
               <p>
                 <img
+                  class="w-50 w-lg-100"
                   src="./images/PastorBeth2.jpg"
-                  width="144"
-                  height="188"
                   alt="Pastor Beth"
                 />
               </p>
@@ -320,9 +318,8 @@
             <div class="col-lg-3 align-self-center text-center">
               <p>
                 <img
+                  class="ms-md-1 ms-lg-5 w-50 w-lg-100"
                   src="./images/DaylightSavings SpringThumb.jpg"
-                  width="200"
-                  height="129"
                   alt="Spring Forward (kangaroo jumps past a clock face)"
                 />
               </p>
@@ -345,10 +342,8 @@
             <div class="col-lg-3 align-self-center text-center">
               <p>
                 <img
-                  class="ms-md-1 ms-lg-4"
+                  class="ms-md-1 ms-lg-5 w-50 w-lg-100"
                   src="./images/Lent.png"
-                  width="167"
-                  height="163"
                   alt='"Lent" incense cup with stylized leaf'
                 />
                 <br />
@@ -376,10 +371,8 @@
               <p>
                 <a href="/ciayouth.html">
                   <img
-                    class="ms-md-1 ms-lg-4"
+                    class="ms-md-1 ms-lg-5 w-50 w-lg-100"
                     src="./images/youth01.jpg"
-                    width="200"
-                    height="139"
                     alt="youth group logo"
                   />
                 </a>
@@ -390,9 +383,8 @@
         <div class="col-lg-4 m-t-50">
           <p class="text-center">
             <img
+              class="w-50"
               src="./images/UMClogo.jpg"
-              width="200"
-              height="236"
               alt="UMC logo - Open Hearts, Open Minds, Open Doors"
             />
           </p>
@@ -430,9 +422,8 @@
           <p>
             <a href="/JAM.html">
               <img
+                class="w-50 w-lg-75"
                 src="./images/JAM_logo.png"
-                width="200"
-                height="228"
                 alt="JAM Jesus and Me (white cross atop paint splatter)"
               />
             </a>
@@ -455,9 +446,8 @@
           <p>
             <a href="/missionmoment.html">
               <img
+                class="w-50 w-lg-75"
                 src="./images/families_forward_logo.jpg"
-                width="200"
-                height="85"
                 alt="families forward logo"
               />
             </a>
@@ -477,9 +467,8 @@
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <img
+              class="w-25 w-lg-50"
               src="./images/missions_toothpaste2.png"
-              width="131"
-              height="130"
               alt="toothpaste in and out of the tube"
             />
           </p>
@@ -504,9 +493,8 @@
               href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship"
             >
               <img
+                class="w-25 w-lg-50"
                 src="./images/AdultDiscussion.jpg"
-                width="150"
-                height="146"
                 alt="Adult Discussion Group logo is several crosses united at the base to form a ship's wheel."
               />
             </a>
@@ -530,9 +518,8 @@
               href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship"
             >
               <img
+                class="w-25 w-lg-50"
                 src="./images/worshipHelp.jpg"
-                width="100"
-                height="80"
                 alt="Worship Helper logo is an open door with light shining through, with the words 'Worship Helpers' above the door."
               />
             </a>
@@ -552,9 +539,8 @@
           <p>
             <a href="/Publications/ExerciseYourFaith.pdf">
               <img
+                class="w-25 w-lg-50"
                 src="./images/nursery.jpg"
-                width="86"
-                height="80"
                 alt="Nursery (drawing of a rocking horse)"
               />
             </a>
@@ -577,9 +563,8 @@
           <p>
             <a href="/Publications/ExerciseYourFaith.pdf">
               <img
+                class="w-50 w-lg-75"
                 src="./images/ExerciseYourFaith.jpg"
-                width="200"
-                height="120"
                 alt="Exercise Your Faith logo (walking group)"
               />
             </a>
@@ -605,9 +590,8 @@
           <p>
             <a href="/MinistryBread.html">
               <img
+                class="w-50 w-lg-75"
                 src="./images/bread.png"
-                width="200"
-                height="112"
                 alt="bread (three baguettes)"
               />
             </a>
@@ -630,9 +614,8 @@
           <p>
             <a href="/Publications/Adel_Ministerial_Assn_Emergency_Fund.pdf">
               <img
+                class="w-50 w-lg-75"
                 src="./images/EmergencyFund.jpg"
-                width="184"
-                height="130"
                 alt="Emergency Funds"
               />
             </a>
