--- a/publications.html
+++ b/publications.html
@@ -194,8 +194,7 @@
         <div class="col">
           <div class="card shadow-sm bg-dark text-white">
             <img
-              class="bd-placeholder-img card-img-top"
-              width="100%"
+              class="card-img-top w-100"
               src="./images/vanmeterbulletinimage.jpg"
               alt="Van Meter Church Bulletin"
             />
@@ -219,8 +218,7 @@
         <div class="col">
           <div class="card shadow-sm bg-dark text-white">
             <img
-              class="bd-placeholder-img card-img-top"
-              width="100%"
+              class="card-img-top w-100"
               src="./images/BibleVerses.jpg"
               alt="BibleVerses for the Week"
             />
@@ -244,8 +242,7 @@
         <div class="col">
           <div class="card shadow-sm bg-dark text-white">
             <img
-              class="bd-placeholder-img card-img-top"
-              width="100%"
+              class="card-img-top w-100"
               src="./images/newsletterimage.jpg"
               alt="The Van Meter UMC Newsletter"
             />
@@ -269,8 +266,7 @@
         <div class="col">
           <div class="card shadow-sm bg-dark text-white">
             <img
-              class="bd-placeholder-img card-img-top"
-              width="100%"
+              class="card-img-top w-100"
               src="./images/GrapevineIcon.jpg"
               alt="Grapevine tells weekly news"
             />
@@ -294,8 +290,7 @@
         <div class="col">
           <div class="card shadow-sm bg-dark text-white">
             <img
-              class="bd-placeholder-img card-img-top"
-              width="100%"
+              class="card-img-top w-100"
               src="./images/devotionUpperRoom.jpg"
               alt="Upper Room Daily Devotional Guide"
             />
@@ -319,8 +314,7 @@
         <div class="col">
           <div class="card shadow-sm bg-dark text-white">
             <img
-              class="bd-placeholder-img card-img-top"
-              width="100%"
+              class="card-img-top w-100"
               src="./images/devotion365.jpg"
               alt="Devotionals 365 days a year:  pause, listen, think, pray, go"
             />
@@ -343,8 +337,7 @@
         <div class="col-12 col-md-6">
           <div class="card shadow-sm bg-dark text-white">
             <img
-              class="bd-placeholder-img card-img-top"
-              width="100%"
+              class="card-img-top w-100"
               src="http://media.salemwebnetwork.com/biblestudytools3/theme/default//master-banner-logo.png"
               alt="Online Bible and Study Tools"
             />
