Fixed bug with columns in form

--- a/building-request.html
+++ b/building-request.html
@@ -253,6 +253,12 @@
             id="required_vars"
             value="name,field-792704759794cbb,field-c5b0d72b8c09b1c,field-c771266992e254f,field-038e996398a85f1"
           />
+          <input
+            required
+            type="hidden"
+            name="field-c5b0d72b8c09b1c"
+            id="field-c5b0d72b8c09b1c"
+          />
         </div>
         <div class="form-floating mb-3">
           <input
@@ -284,7 +290,7 @@
           <label for="email">Email Address</label>
         </div>
         <div class="row">
-          <div class="form-floating col mb-3">
+          <div class="form-floating col-lg-6 mb-3">
             <input
               required
               type="datetime-local"
@@ -294,14 +300,8 @@
               onchange="checkDate()"
             />
             <label class="ms-2" for="date">Start Time Building Is Needed</label>
-            <input
-              required
-              type="hidden"
-              name="field-c5b0d72b8c09b1c"
-              id="field-c5b0d72b8c09b1c"
-            />
           </div>
-          <div class="form-floating col mb-3">
+          <div class="form-floating col-lg-6 mb-3">
             <input
               required
               type="datetime-local"
