--- a/directions.html
+++ b/directions.html
@@ -211,8 +211,8 @@
         <a
           href="http://maps.google.com/maps?q=100+Hazel+St.+Van+Meter,+IA+50261&amp;hl=en&amp;sll=41.525423,-93.883366&amp;sspn=0.013735,0.033023&amp;gl=us&amp;hnear=100+Hazel+St,+Van+Meter,+Dallas,+Iowa+50261&amp;t=m&amp;z=17"
           ><img
+            class="w-75"
             src="images/VMmap.png"
-            width="75%"
             alt="map of Van Meter with church"
           />
         </a>
