--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
         </div>
         <div class="col-lg-4 text-center my-auto">
           <iframe
+            class="overflow-hidden"
             src="//www.google.com/calendar/embed?mode=AGENDA&height=300&wkst=1&bgcolor=%23cccccc&src=9k15r4oj9pihte8nr4s3ra7qag%40group.calendar.google.com&color=%23BE6D00&src=a8so3okd24r3jbjr546tastrg0%40group.calendar.google.com&color=%234A716C&src=5cm43rq8vd82m98u7odb5jjmas%40group.calendar.google.com&color=%23A32929&src=en.usa%23holiday%40group.v.calendar.google.com&color=%232952A3&ctz=America%2FChicago"
-            style="border: none; overflow: hidden; border-width: 0"
             width="250"
             height="300"
           ></iframe>
