--- a/kidsCare.html
+++ b/kidsCare.html
@@ -264,8 +264,7 @@
         <div class="col-lg-4 align-self-center text-center">
           <img
             src="./images/KidsCareLogo4.jpg"
-            width="260"
-            height="251"
+            class="w-75"
             alt="Kids Care logo - multi-color handprints around a cross"
           />
         </div>
@@ -379,7 +378,7 @@
         <p>
           <img
             src="./images/KidsCareFun.jpg"
-            width="100%"
+            class="w-100"
             alt="Kids Care Fun a collage of pictures from activities and field trips"
           />
         </p>
