--- a/worship.html
+++ b/worship.html
@@ -203,13 +203,12 @@
               from 6:30-7:30.
             </p>
           </div>
-          <div class="col-lg-1 align-self-center text-center">
+          <div class="col-lg-3 align-self-center text-center text-lg-start">
             <p>
               <a href="/JAM.html">
                 <img
                   src="./images/JAM_logo.png"
-                  width="114"
-                  height="130"
+                  class="w-50"
                   alt="JAM Jesus and Me (white cross atop paint splatter)"
                 />
               </a>
@@ -238,11 +237,10 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-1 align-self-center text-center">
+          <div class="col-lg-3 align-self-center text-center text-lg-start">
             <img
               src="./images/worship2.jpg"
-              width="105"
-              height="145"
+              class="w-50"
               alt="drawing of stained glass window featuring creche, star, shepherd, Mary, and bright piecemeal background"
             />
           </div>
