rounded content for medium+ screens

--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
     />
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
-  <div id="banner" class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
+  <div
+    id="banner"
+    class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0 rounded-md-top"
+  >
     <picture>
       <source srcset="./images/websitebanner.webp" type="image/webp" />
       <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-      <img class="w-100" src="./images/websitebanner.jpg" />
+      <img class="w-100 rounded-md-top" src="./images/websitebanner.jpg" />
     </picture>
   </div>
   <div id="navbar-container" class="container mx-auto p-0">
@@ -216,7 +219,7 @@
         </div>
         <div class="col-lg-2 align-self-center text-center">
           <img
-            class="w-25 w-lg-100"
+            class="w-25 w-lg-100 rounded"
             src="./images/Welcome.jpg"
             alt="Welcome (family walking through church doors)"
           />
@@ -237,7 +240,7 @@
             <div class="col-lg 2 align-self-center">
               <p>
                 <img
-                  class="w-50 w-lg-100"
+                  class="w-50 w-lg-100 rounded"
                   src="./images/PastorBeth2.jpg"
                   alt="Pastor Beth"
                 />
@@ -295,7 +298,7 @@
         </div>
         <div class="col-lg-4 text-center my-auto">
           <iframe
-            class="overflow-hidden"
+            class="overflow-hidden rounded"
             src="//www.google.com/calendar/embed?mode=AGENDA&height=300&wkst=1&bgcolor=%23cccccc&src=9k15r4oj9pihte8nr4s3ra7qag%40group.calendar.google.com&color=%23BE6D00&src=a8so3okd24r3jbjr546tastrg0%40group.calendar.google.com&color=%234A716C&src=5cm43rq8vd82m98u7odb5jjmas%40group.calendar.google.com&color=%23A32929&src=en.usa%23holiday%40group.v.calendar.google.com&color=%232952A3&ctz=America%2FChicago"
             width="250"
             height="300"
@@ -318,7 +321,7 @@
             <div class="col-lg-3 align-self-center text-center">
               <p>
                 <img
-                  class="ms-md-1 ms-lg-5 w-50 w-lg-100"
+                  class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded"
                   src="./images/DaylightSavings SpringThumb.jpg"
                   alt="Spring Forward (kangaroo jumps past a clock face)"
                 />
@@ -342,7 +345,7 @@
             <div class="col-lg-3 align-self-center text-center">
               <p>
                 <img
-                  class="ms-md-1 ms-lg-5 w-50 w-lg-100"
+                  class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded"
                   src="./images/Lent.png"
                   alt='"Lent" incense cup with stylized leaf'
                 />
@@ -371,7 +374,7 @@
               <p>
                 <a href="/ciayouth.html">
                   <img
-                    class="ms-md-1 ms-lg-5 w-50 w-lg-100"
+                    class="ms-md-1 ms-lg-5 w-50 w-lg-100 rounded"
                     src="./images/youth01.jpg"
                     alt="youth group logo"
                   />
@@ -383,7 +386,7 @@
         <div class="col-lg-4 m-t-50">
           <p class="text-center">
             <img
-              class="w-50"
+              class="w-50 rounded"
               src="./images/UMClogo.jpg"
               alt="UMC logo - Open Hearts, Open Minds, Open Doors"
             />
@@ -422,7 +425,7 @@
           <p>
             <a href="/JAM.html">
               <img
-                class="w-50 w-lg-75"
+                class="w-50 w-lg-75 rounded"
                 src="./images/JAM_logo.png"
                 alt="JAM Jesus and Me (white cross atop paint splatter)"
               />
@@ -446,7 +449,7 @@
           <p>
             <a href="/missionmoment.html">
               <img
-                class="w-50 w-lg-75"
+                class="w-50 w-lg-75 rounded"
                 src="./images/families_forward_logo.jpg"
                 alt="families forward logo"
               />
@@ -467,7 +470,7 @@
         <div class="col-lg-3 align-self-center text-center">
           <p>
             <img
-              class="w-25 w-lg-50"
+              class="w-25 w-lg-50 rounded"
               src="./images/missions_toothpaste2.png"
               alt="toothpaste in and out of the tube"
             />
@@ -493,7 +496,7 @@
               href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship"
             >
               <img
-                class="w-25 w-lg-50"
+                class="w-25 w-lg-50 rounded"
                 src="./images/AdultDiscussion.jpg"
                 alt="Adult Discussion Group logo is several crosses united at the base to form a ship's wheel."
               />
@@ -518,7 +521,7 @@
               href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship"
             >
               <img
-                class="w-25 w-lg-50"
+                class="w-25 w-lg-50 rounded"
                 src="./images/worshipHelp.jpg"
                 alt="Worship Helper logo is an open door with light shining through, with the words 'Worship Helpers' above the door."
               />
@@ -539,7 +542,7 @@
           <p>
             <a href="/Publications/ExerciseYourFaith.pdf">
               <img
-                class="w-25 w-lg-50"
+                class="w-25 w-lg-50 rounded"
                 src="./images/nursery.jpg"
                 alt="Nursery (drawing of a rocking horse)"
               />
@@ -563,7 +566,7 @@
           <p>
             <a href="/Publications/ExerciseYourFaith.pdf">
               <img
-                class="w-50 w-lg-75"
+                class="w-50 w-lg-75 rounded"
                 src="./images/ExerciseYourFaith.jpg"
                 alt="Exercise Your Faith logo (walking group)"
               />
@@ -590,7 +593,7 @@
           <p>
             <a href="/MinistryBread.html">
               <img
-                class="w-50 w-lg-75"
+                class="w-50 w-lg-75 rounded"
                 src="./images/bread.png"
                 alt="bread (three baguettes)"
               />
@@ -614,7 +617,7 @@
           <p>
             <a href="/Publications/Adel_Ministerial_Assn_Emergency_Fund.pdf">
               <img
-                class="w-50 w-lg-75"
+                class="w-50 w-lg-75 rounded"
                 src="./images/EmergencyFund.jpg"
                 alt="Emergency Funds"
               />
@@ -635,8 +638,8 @@
       </div>
     </div>
   </body>
-  <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
-    <div class="row mx-auto bg-dark shadow text-white">
+  <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0">
+    <div class="row mx-auto bg-dark shadow text-white rounded-md-bottom">
       <div
         class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
       >
