--- a/3rdGradeBibleClass.html
+++ b/3rdGradeBibleClass.html
@@ -33,11 +33,14 @@
   </head>
   <body>
     <!-- Banner -->
-    <div id="banner" class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
+    <div
+      id="banner"
+      class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0 rounded-md-top"
+    >
       <picture>
         <source srcset="./images/websitebanner.webp" type="image/webp" />
         <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-        <img class="w-100" src="./images/websitebanner.jpg" />
+        <img class="w-100 rounded-md-top" src="./images/websitebanner.jpg" />
       </picture>
     </div>
     <!-- End Banner -->
@@ -226,9 +229,9 @@
     </div>
 
     <!-- Start Footer -->
-    <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
+    <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0">
       <!-- Footer row -->
-      <div class="row mx-auto bg-dark shadow text-white">
+      <div class="row mx-auto bg-dark shadow text-white rounded-md-bottom">
         <!-- Left column for UMC logo -->
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
