--- a/kidsCare.html
+++ b/kidsCare.html
@@ -33,11 +33,14 @@
   </head>
   <body>
     <!-- Banner -->
-    <div id="banner" class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
+    <div
+      id="banner"
+      class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0 rounded-md-top"
+    >
       <picture>
         <source srcset="./images/websitebanner.webp" type="image/webp" />
         <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-        <img class="w-100" src="./images/websitebanner.jpg" />
+        <img class="w-100 rounded-md-top" src="./images/websitebanner.jpg" />
       </picture>
     </div>
     <!-- End Banner -->
@@ -197,7 +200,9 @@
           <strong>Kids Care Phone: 491-1198</strong>
         </div>
         <div class="col-lg-4">
-          <strong>Email: kidscare@vmumc.com</strong>
+          <strong
+            >Email: <a href="mailto:kidscare@vmumc.com">kidscare@vmumc.com</a>
+          </strong>
         </div>
       </div>
       <div class="row mx-auto pt-3">
@@ -264,7 +269,7 @@
         <div class="col-lg-4 align-self-center text-center">
           <img
             src="./images/KidsCareLogo4.jpg"
-            class="w-75"
+            class="w-75 rounded"
             alt="Kids Care logo - multi-color handprints around a cross"
           />
         </div>
@@ -378,25 +383,16 @@
         <p>
           <img
             src="./images/KidsCareFun.jpg"
-            class="w-100"
+            class="w-100 rounded"
             alt="Kids Care Fun a collage of pictures from activities and field trips"
           />
         </p>
       </div>
-      <div class="row text-center mx-auto pt-3">
-        <h3>Director: Jess Jaspers</h3>
-        <div class="col-lg-6">
-          <h3>Phone: 491-1198</h3>
-        </div>
-        <div class="col-lg-6">
-          <h3>Email: Kidscare@vmumc.com</h3>
-        </div>
-      </div>
     </div>
     <!-- Start Footer -->
-    <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
+    <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0">
       <!-- Footer row -->
-      <div class="row mx-auto bg-dark shadow text-white">
+      <div class="row mx-auto bg-dark shadow text-white rounded-md-bottom">
         <!-- Left column for UMC logo -->
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
