--- a/missing.html
+++ b/missing.html
@@ -175,7 +175,7 @@
       </div>
     </div>
     <footer class="mt-auto">
-      <div class="row mx-auto bg-dark shadow text-white rounded-md-bottom">
+      <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
         >
