--- a/missionmoment.html
+++ b/missionmoment.html
@@ -37,14 +37,11 @@
   <!-- Body starts here -->
   <body>
     <!-- Banner -->
-    <div
-      id="banner"
-      class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0 rounded-md-top"
-    >
+    <div id="banner" class="mt-sm-3 container mx-auto p-0 rounded-sm-top">
       <picture>
         <source srcset="./images/websitebanner.webp" type="image/webp" />
         <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-        <img class="w-100 rounded-md-top" src="./images/websitebanner.jpg" />
+        <img class="w-100 rounded-sm-top" src="./images/websitebanner.jpg" />
       </picture>
     </div>
     <!-- End Banner -->
@@ -315,9 +312,9 @@
       </div>
     </div>
     <!-- Start Footer -->
-    <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0">
+    <footer class="mb-sm-3 container mx-auto p-0">
       <!-- Footer row -->
-      <div class="row mx-auto bg-dark shadow text-white rounded-md-bottom">
+      <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- Left column for UMC logo -->
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
