--- a/index.html
+++ b/index.html
@@ -43,14 +43,11 @@
     />
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
-  <div
-    id="banner"
-    class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0 rounded-md-top"
-  >
+  <div id="banner" class="mt-sm-3 container mx-auto p-0 rounded-sm-top">
     <picture>
       <source srcset="./images/websitebanner.webp" type="image/webp" />
       <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-      <img class="w-100 rounded-md-top" src="./images/websitebanner.jpg" />
+      <img class="w-100 rounded-sm-top" src="./images/websitebanner.jpg" />
     </picture>
   </div>
   <div id="navbar-container" class="container mx-auto p-0">
@@ -638,8 +635,8 @@
       </div>
     </div>
   </body>
-  <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0">
-    <div class="row mx-auto bg-dark shadow text-white rounded-md-bottom">
+  <footer class="mb-sm-3 container mx-auto p-0">
+    <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
       <div
         class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
       >
